Sun Dec 13 16:41:01 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (BOOTSTRAPRUBY): make BASERUBY full path before
	  building ruby to get rid of unexpectedly invoking built ruby.
	  [ruby-core:72065] [Bug #11807]

	* configure.in (BOOTSTRAPRUBY): use MINIRUBY but not BASERUBY
	  unless cross compiling.  [ruby-core:72065] [Bug #11807]

Sun Dec 13 14:17:19 2015  Akinori MUSHA  <knu@iDaemons.org>

	* test/test_shellwords.rb (TestShellwords): Add many more tests
	  for handling whitespace characters and frozenness.

Sun Dec 13 14:16:09 2015  Akinori MUSHA  <knu@iDaemons.org>

	* lib/shellwords.rb (Shellwords#shellsplit): Document that this
	  method does not treat shell metacharacters as such.

Sun Dec 13 12:17:43 2015  Eric Wong  <e@80x24.org>

	* lib/shellwords.rb (shellescape): duplicate frozen literal
	* test/test_shellwords.rb (test_stringification): new test

Sun Dec 13 11:47:35 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* object.c (rb_inspect): check the default internal encoding as
	  String#inspect do.
	  [ruby-dev:49415] [Bug #11787]

Sun Dec 13 11:38:12 2015  Akinori MUSHA  <knu@iDaemons.org>

	* lib/shellwords.rb: Turn on frozen-string-literal after fixing
	  shellsplit.

Sun Dec 13 10:44:44 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* KNOWNBUGS.rb: Fixed typo, made more explicit [ci skip]

Sun Dec 13 10:26:47 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/ossl_ssl.c (ssl_npn_select_cb_common): fix parsing
	  protocol list.
	  The protocol list from OpenSSL is not null-terminated.
	  patched by Kazuki Yamaguchi [Bug #11810] [ruby-core:72082]

Sun Dec 13 06:40:30 2015  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/ostruct.rb: Have OpenStruct#dig raise if argument is not a
	  symbol
	  nor a string. See [#11762]

Sun Dec 13 00:05:42 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_insnhelper.c (vm_call_method_missing): method_missing should
	  not be refined.
	  [ruby-core:72080] [Bug #11809]
