@@ -312,6 +312,9 @@ if defined?(WIN32OLE)
       assert_raise(ArgumentError) {
         shell.ole_query_interface
       }
+      assert_raise(TypeError) {
+        shell.ole_query_interface(0x11223344)
+      }
       shell2 = shell.ole_query_interface('{A4C6892C-3BA9-11D2-9DEA-00C04FB16162}')
       assert_instance_of(WIN32OLE, shell2)
     end
